--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+  </script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("B8T8yiI5aCfiQrANA");
+    })();
+  </script>
 </body>
 
 </html>
